# algotemplates

./: ._modifieddijkstras.cpp  ._originaldijkstras.cpp  CMakeLists.txt  Gaussian.cpp  LCS.cpp  LIS.cpp  MVC_bilateral.cpp  TSP.cpp  UFDS.cpp  almost_UFDS.cpp  articulation_and_bridges.cpp  choose.cpp  closest_zero.cpp  fast_io.cpp  halloween_loot_closest_sum.cpp  kadane.cpp  kosaraju.cpp  mcbm.cpp  mcmf  mcmf.cpp  modifieddijkstras.cpp  nchoosek.cpp  prim.cpp  prim2.cpp  shortest_cycle.cpp  shunting_yard.cpp  sliding_window.cpp  subset_sum.cpp  subsets.cpp  vector_hash.cpp
NT/: linear_recurrence.cpp  modular_arithmetic.cpp  sieve_of_eratosthenes.cpp
UFDS/: almost_UFDS_0_08s.cpp  almost_UFDS_0_22s.cpp
dijkstras/: gfgdijkstras.cpp  originaldijkstras.cpp
flows/: baseball_elimination_variant.cpp  bruteforce.cpp  cordonbleu.cpp  dinics.cpp  faster_hungarian.cpp  fixed_mcmf.cpp  hungarian.cpp  hungarian_int.cpp  kattis_maxflow.cpp  kattis_mincut.cpp  mcmf.cpp  openpitmining.cpp  sample_hungarian.cpp  unweighted_bruteforce.cpp
geometry/: lat_long_dist.cpp
greedy/: min_interval_cover.cpp
java_specifics/: gregorian_calendar.java
misc/: hexagonal_traversal.cpp  leap_year.cpp  mat_mult_steroids.cpp  sqrt_decomposition  sqrt_decomposition.cpp
range_query/: ._fenwicktree_ds.cpp  modified_fenwick.cpp  modified_fenwick_2.cpp
shunting_yard_prefix_infix_postfix/: infix_to_postfix.cpp
string/: KMP.cpp  Trie  life_form.cpp  longes_repeated_substring_all.cpp  longest_repeated_non_overlapping_substring.cpp  longest_repeated_non_overlapping_substring_SA.cpp  rhyme_power.cpp  (+4 more)
(+4 files in other folders)
